@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-30T08:08:30Z",
+  "timestamp" : "2022-08-31T08:08:02Z",
   "count_outdated" : 1751,
   "uniques_outdated" : 522,
-  "count" : 1777,
-  "uniques" : 538,
+  "count" : 1778,
+  "uniques" : 539,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -84,6 +84,13 @@
     },
     {
       "timestamp": "2022-08-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
