@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 6,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2022-08-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
