@@ -1,3 +1,11 @@
+2022-08-31T08:08:02Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2962260926
+* notice: last 14d: unq all: 6 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 522 1751 / 538 1777
+* notice: next accum: outdated-unq outdated-all / unq all: 522 1751 / 539 1778
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-30T08:08:30Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2954579922
 * notice: last 14d: unq all: 6 26
